<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="activity.commt4mtmandroid.activity.LoginChooseActivity"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    >
    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/tb_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorBlue"
        android:elevation="2dp"
        android:translationZ="2dp"
        android:titleTextColor="@color/colorWhite"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        app:theme="@style/ToolbarTheme"
        app:title="@string/New_Account"
        app:titleTextColor="@color/colorWhite"></android.support.v7.widget.Toolbar>
    <ImageView
        android:src="@mipmap/mt4_icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"/>

    <RelativeLayout
        android:onClick="userRegiest"
        android:padding="20dp"
        android:clickable="true"
        android:foreground="?selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/color333"
                android:text="@string/Swr"
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="3dp"
                android:text="@string/SwrDescp"
                android:textSize="14dp"
                android:textColor="@color/color333"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
    <View style="@style/line_1px"
        android:layout_marginLeft="20dp"></View>
    <RelativeLayout
        android:padding="20dp"
        android:clickable="true"
        android:onClick="serviceChooseClick"
        android:foreground="?selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/color333"
                android:text="@string/Opda"
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="3dp"
                android:text="@string/OpdaDesc"
                android:textSize="14dp"
                android:textColor="@color/color333"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
    <View
        android:layout_marginLeft="20dp"
        style="@style/line_1px"/>

    <View style="@style/line_1px" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?selectableItemBackground"
        android:onClick="loginClick"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Laea"
                android:textColor="@color/color333"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/LaeaDesc"
                android:textColor="@color/color333"
                android:textSize="15dp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>