<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/color333"
            android:textSize="16dp"
            android:text="@string/Profit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/profitContent"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/color333"
            android:layout_alignParentRight="true"
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="10dp"
            android:textColor="@color/color333"
            android:textSize="16dp"
            android:text="@string/Credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            />
        <TextView
            android:layout_marginRight="10dp"
            android:textColor="@color/color333"
            android:layout_alignParentRight="true"
            android:text="0.00"
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView

            android:layout_marginLeft="10dp"
            android:textColor="@color/color333"
            android:textSize="16dp"
            android:text="@string/Deposit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView

            android:id="@+id/inOfGoldContent"
            android:layout_marginRight="10dp"
            android:textColor="@color/color333"
            android:layout_alignParentRight="true"
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView

            android:layout_marginLeft="10dp"
            android:textColor="@color/color333"
            android:textSize="16dp"
            android:text="@string/Withdrawal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/outOfGoldContent"
            android:layout_marginRight="10dp"
            android:textColor="@color/color333"
            android:layout_alignParentRight="true"
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView

            android:layout_marginLeft="10dp"
            android:textColor="@color/color333"
            android:textSize="16dp"
            android:text="@string/Balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/balanceContent"
            android:layout_marginRight="10dp"
            android:textColor="@color/color333"
            android:layout_alignParentRight="true"
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</LinearLayout>