<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <com.kennyc.view.MultiStateView xmlns:app="http://schemas.android.com/apk/res-auto"

        android:id="@+id/loadingView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:msv_loadingView="@layout/item_history_empty">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:elevation="2dp"
                android:translationZ="1dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorWhite">

                <RadioGroup
                    android:id="@+id/history_radioGroup"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <RadioButton
                        android:checked="true"
                        android:id="@+id/radioButton_day"
                        android:textColor="@drawable/history_text_selector"
                        android:background="@drawable/history_date_left_selector"
                        android:gravity="center"
                        android:button="@null"
                        android:text="@string/Day"
                        android:layout_width="50dp"
                        android:layout_height="30dp" />
                    <RadioButton
                        android:id="@+id/radioButton_week"
                        android:textColor="@drawable/history_text_selector"
                        android:background="@drawable/history_date_center_selector"
                        android:gravity="center"
                        android:button="@null"
                        android:text="@string/Week"
                        android:layout_width="50dp"
                        android:layout_height="30dp" />
                    <RadioButton
                        android:id="@+id/radioButton_month"
                        android:textColor="@drawable/history_text_selector"
                        android:background="@drawable/history_date_center_selector"
                        android:gravity="center"
                        android:button="@null"
                        android:text="@string/Month"
                        android:layout_width="50dp"
                        android:layout_height="30dp" />
                    <RadioButton
                        android:id="@+id/radioButton_custom"
                        android:textColor="@drawable/history_text_selector"
                        android:background="@drawable/history_date_right_selector"
                        android:gravity="center"
                        android:button="@null"
                        android:text="@string/Custom"
                        android:layout_width="50dp"
                        android:layout_height="30dp" />
                </RadioGroup>

            </RelativeLayout>
            <ListView
                android:id="@+id/listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></ListView>
        </LinearLayout>

    </com.kennyc.view.MultiStateView>
</LinearLayout>