<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.commt4mtmandroid.activity.AboutActivity">

    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/tb_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorBlue"
        android:elevation="2dp"
        android:translationZ="2dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        app:theme="@style/ToolbarTheme"
        app:title="@string/About"
        app:titleTextColor="@color/colorWhite"></android.support.v7.widget.Toolbar>


    <ImageView
        android:id="@+id/icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/tb_toolbar"
        android:layout_centerHorizontal="true"
        android:scaleType="center"
        android:src="@mipmap/mt4_icon" />

    <View
        android:id="@+id/line1"
        style="@style/line_1px"
        android:layout_height="1dp"
        android:layout_below="@+id/icon"
        android:background="#efefef" />

    <RelativeLayout
        android:id="@+id/soundsRl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:background="@color/colorWhite">

        <com.suke.widget.SwitchButton
            android:id="@+id/soundSwich"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            app:sb_show_indicator="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/Sounds"
            android:textColor="@color/color333"
            android:textSize="16dp" />
    </RelativeLayout>

    <View
        android:id="@+id/line2"
        style="@style/line_1px"
        android:layout_height="1dp"
        android:layout_below="@+id/soundsRl"
        android:layout_marginLeft="10dp"
        android:background="#efefef" />
    <RelativeLayout
        android:id="@+id/locksRl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line2"
        android:background="@color/colorWhite">

        <com.suke.widget.SwitchButton
            android:id="@+id/lockSwich"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            app:sb_show_indicator="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/Auto_Lock"
            android:textColor="@color/color333"
            android:textSize="16dp" />
    </RelativeLayout>
    <View
        android:id="@+id/line3"
        style="@style/line_1px"
        android:layout_height="1dp"
        android:layout_below="@+id/locksRl"
        android:layout_marginLeft="10dp"
        android:background="#efefef" />
    <RelativeLayout
        android:id="@+id/newsRl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line3"
        android:background="@color/colorWhite">

        <com.suke.widget.SwitchButton
            android:id="@+id/newsSwich"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            app:sb_show_indicator="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/Enable_News"
            android:textColor="@color/color333"
            android:textSize="16dp" />
    </RelativeLayout>

    <View
        android:id="@+id/line4"
        style="@style/line_1px"
        android:layout_height="1dp"
        android:layout_below="@+id/newsRl"
        android:background="#efefef" />
    <TextView
        android:gravity="center"
        android:textColor="@color/colorBlue"
        android:textSize="12dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="Powered by MetaQuotes Sofeware Corp."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
